	* usecode/compiler/ucsym.cc: UCC now issues a warning for every function
	  that gets autonumbered unless '#autonumber' directive is used.
	* usecode/compiler/uclex.yy: Optimizing lexical scanner a bit.
	* palette.cc, gameclk.cc: Fixing problems with infravision and (possibly)
	  invisibility palettes.
	* effects.cc: Tweaking duration of rain and snow a bit.

2007-06-30	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* (general): Adding missing newlines to end of files. Making numeric keypad
	  work for number input and return in gumps/menus.
	* usecode/ucsym.cc: Making shape# work again if using old auto-numbering.
	* mapedit/*: Allow separate viewing of shape functions in usecode browser.
	* content/bgkeyring/src/spells/npc_spells.uc: Reagents were being incorrectly
	  counted and used.
	* content/*: Updated old usecode to a more modern form. Fixed dialog bugs in
	  SF island and fixed initial scene.

2007-06-29	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* ChangeLog: Corrected date for yesterday's entry
	* PocketPC;touchscreen: Added toggleRight and toggleDouble functions to
			touchscreen class
	* PocketPC;Keyboard_gump: Cleaned up ActivateOtherButton function
				Added per-state ActivateOtherButton functions
	* PocketPC;Keyboard_gump: Enabled saving & loading of on-screen keyboard
			position and state
	* PocketPC;Keyboard_gump: Added getState and getCorner accessor functions
	* PocketPC: Added "KEYBOARD_POSITION" action	
	* PocketPC: Added "KEYBOARD_MODE" action
	* Added README.PocketPC
	* PocketPC: Added "Normal" option to d-pad options (in case someone has
			custom keybindings)

2007-06-28	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* PocketPC: Added touchscreen class
			Allows users to set mouse to double click mode
			Allows users to set mouse to right click mode
			Users can do both double click and right click modes
			Added TOUCHSCREEN_MODE action, so it can be mapped to a key